fixes overflow on safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -314,6 +314,8 @@ body {
 #home-content {
   height: fit-content;
   width: 100%;
+  max-width: 100vw;
+  overflow: scroll;
   text-align: center;
   background: rgba(36, 60, 87, 0.842);
   margin: auto;
